fubnctionalities added and fixed structure